<resources>
    <string name="app_name">FindJob</string>
    <string name="add_to_list">Add To List</string>
    <string name="profile">Profile</string>
    <string name="login_as_partner">Login as Partner</string>
    <string name="login_as_student">Login as Student</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>

    <string-array name="test_list">
        <item>qwertyuiop</item>
        <item>asdghjkl</item>
        <item>1234567</item>
        <item>jdadhajdad</item>
        <item>ffssjsfsf</item>
        <item>oqiqijsnc</item>
        <item>isjsiskaoand</item>
        <item>jydndkish</item>
    </string-array>

    <string-array name="test_description">
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>
        <item>This is test description</item>

    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>